--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,12 +1,19 @@
+keycloak:
+  auth-server-url: http://10.199.100.13:8080
+  bearer-only: true
+  realm: ksa
+  resource: ksa-account-service
+  credentials:
+    secret: QbszaU0qA2jIiHz0TqlDsQUXUS21B2kV
+  use-resource-role-mappings: false
+  principal-attribute: preferred_username
+  ssl-required: external
+
 server:
-  port: 8999
+  port: 9001
 spring:
-  servlet:
-    multipart:
-      max-file-size: 6MB
-      max-request-size: 10MB
   application:
-    name: ksa_ekyc_register
+    name: ksa_account_service
   jackson:
     default-property-inclusion: NON_NULL
     serialization:
@@ -30,35 +37,25 @@ spring:
       matching-strategy: ant_path_matcher
   jpa:
     show-sql: true
-  minio:
-    url: https://static-uat.kss.com.vn
-    access-key: uat-user-document
-    secret-key: F3wwxLQ6qZQAQfYVfg3D3xNVtS9H04Fj
-    bucket: uat-user-document
+
 logging:
   level:
     root: info
 
-ekyc:
-  vvn:
-    key: 7c8ba773-64cd-4ba5-a9bd-f035f06d0149
-    recognition: http://10.101.0.30:8091/ocr/recognition
-    faceVerification: http://10.101.0.30:8094/faceid/verification
-redis:
-  host: 10.199.100.9
-  port: 6379
-  database: 3
-  timeout: 60
-  password: yqlhFMwPb1Wm50es
 
-
-ksa:
-  user-default: KSA00000
-  mail:
-    url: http://10.199.18.5:8080/mail
-  template:
-    email:
-      change-pin: change_pin.html
-  sms:
-    url: http://10.199.18.5:10002
-    templateOTP: otp-bond-order
+management:
+  endpoint:
+    prometheus:
+      enabled: true
+    metrics:
+      enabled: true
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+        pushgateway:
+          enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: health, info, prometheus, metrics
