--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,10 +2,10 @@ spring:
   application:
     name: ksa_ekyc_register
   profiles:
-    active: local
+    active: cloud_uat
   cloud:
     config:
-      enabled: false
+      enabled: true
       uri: https://configdev.kss.com.vn
       #label : develop
       request-read-timeout: 10000
